// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Java Dockerfile rendering > uses pinned Maven and Corretto stages without network-fetched tooling > Dockerfile-java 1`] = `
"FROM public.ecr.aws/docker/library/maven:3.9-amazoncorretto-21 AS build
WORKDIR /build
# Resolve dependencies in their own layer, so a source edit does not download them again.
COPY pom.xml .
RUN mvn -q -B dependency:go-offline
COPY src ./src
RUN mvn -q -B -DskipTests package

FROM public.ecr.aws/amazoncorretto/amazoncorretto:21
WORKDIR /app
RUN yum install -y shadow-utils && useradd -m -u 1000 bedrock_agentcore && yum clean all
COPY --from=build --chown=bedrock_agentcore:bedrock_agentcore /build/target/*.jar /app/app.jar
ENV PLAYWRIGHT_SKIP_BROWSER_DOWNLOAD=1
USER bedrock_agentcore
EXPOSE 8080
CMD ["java", "-jar", "/app/app.jar"]
"
`;

exports[`Java assets > java/java/http/spring/base/README.md should match snapshot 1`] = `
"# {{name}}

Java / Spring AI agent for Amazon Bedrock AgentCore Runtime, generated by agentcore-cli.

## Prerequisites

- JDK 21
- Maven 3.9+
- \`AWS_REGION\`
- AWS credentials with Bedrock access for live model invocations

## Run locally

\`\`\`bash
AWS_REGION=us-west-2 mvn spring-boot:run
curl localhost:8080/ping
curl -N localhost:8080/invocations \\
  -H 'Content-Type: application/json' \\
  -H 'Accept: text/event-stream' \\
  -d '{"prompt":"hi"}'
\`\`\`

\`agentcore dev\` starts the same \`mvn spring-boot:run\` process and restarts it on demand. It does not provide hot reload.

If \`MEMORY_<NAME>_ID\` is set, the agent validates the memory at startup and exits on failure.
"
`;

exports[`Java assets > java/java/http/spring/base/gitignore.template should match snapshot 1`] = `
"target/
*.class
.idea/
*.iml
.vscode/
"
`;

exports[`Java assets > java/java/http/spring/base/pom.xml should match snapshot 1`] = `
"<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>4.1.1</version>
        <relativePath/>
    </parent>

    <groupId>com.example</groupId>
    <artifactId>{{name}}</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <name>{{name}}</name>
    <description>Spring AI agent on Amazon Bedrock AgentCore Runtime</description>

    <properties>
        <java.version>21</java.version>
        <spring-ai.version>2.0.1</spring-ai.version>
        <spring-ai-agentcore.version>2.1.0</spring-ai-agentcore.version>
{{#if hasSkillsFetcher}}
        <spring-ai-agent-utils.version>0.12.0</spring-ai-agent-utils.version>
{{/if}}
        <aws-sdk.version>2.54.13</aws-sdk.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.springframework.ai</groupId>
                <artifactId>spring-ai-bom</artifactId>
                <version>\${spring-ai.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>org.springaicommunity</groupId>
                <artifactId>spring-ai-agentcore-bom</artifactId>
                <version>\${spring-ai-agentcore.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>software.amazon.awssdk</groupId>
                <artifactId>bom</artifactId>
                <version>\${aws-sdk.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <dependency>
            <groupId>org.springaicommunity</groupId>
            <artifactId>spring-ai-agentcore-runtime-starter</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.ai</groupId>
            <artifactId>spring-ai-starter-model-bedrock-converse</artifactId>
        </dependency>
{{#if hasMemory}}
        <dependency>
            <groupId>org.springaicommunity</groupId>
            <artifactId>spring-ai-agentcore-memory</artifactId>
        </dependency>
{{/if}}
{{#if (or hasGateway remoteMcpTools.length)}}
        <dependency>
            <groupId>org.springframework.ai</groupId>
            <artifactId>spring-ai-starter-mcp-client</artifactId>
        </dependency>
{{/if}}
{{#if hasSkillsFetcher}}
        <dependency>
            <groupId>org.springaicommunity</groupId>
            <artifactId>spring-ai-agent-utils</artifactId>
            <version>\${spring-ai-agent-utils.version}</version>
        </dependency>
{{/if}}
{{#if hasCodeInterpreter}}
        <dependency>
            <groupId>org.springaicommunity</groupId>
            <artifactId>spring-ai-agentcore-code-interpreter</artifactId>
        </dependency>
{{/if}}
{{#if hasBrowser}}
        <dependency>
            <groupId>org.springaicommunity</groupId>
            <artifactId>spring-ai-agentcore-browser</artifactId>
        </dependency>
{{/if}}
{{#if hasGateway}}
        <dependency>
            <groupId>software.amazon.awssdk</groupId>
            <artifactId>auth</artifactId>
        </dependency>
        <dependency>
            <groupId>software.amazon.awssdk</groupId>
            <artifactId>regions</artifactId>
        </dependency>
        <dependency>
            <groupId>software.amazon.awssdk</groupId>
            <artifactId>http-auth-aws</artifactId>
        </dependency>
{{/if}}
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
            </plugin>
        </plugins>
    </build>
</project>
"
`;

exports[`Java assets > java/java/http/spring/base/src/main/java/com/example/agent/AgentApplication.java should match snapshot 1`] = `
"package com.example.agent;

import org.springframework.boot.SpringApplication;
import org.springframework.boot.autoconfigure.SpringBootApplication;

@SpringBootApplication
public class AgentApplication {

    public static void main(String[] args) {
        SpringApplication.run(AgentApplication.class, args);
    }
}
"
`;

exports[`Java assets > java/java/http/spring/base/src/main/java/com/example/agent/ChatRequest.java should match snapshot 1`] = `
"package com.example.agent;

import com.fasterxml.jackson.annotation.JsonIgnoreProperties;

/** Request body for the AgentCore {@code /invocations} endpoint. Fields other than {@code prompt} are ignored. */
@JsonIgnoreProperties(ignoreUnknown = true)
public record ChatRequest(String prompt) {
}
"
`;

exports[`Java assets > java/java/http/spring/base/src/main/java/com/example/agent/ChatService.java should match snapshot 1`] = `
"package com.example.agent;

import java.util.List;

import com.fasterxml.jackson.annotation.JsonInclude;
import org.slf4j.Logger;
import org.slf4j.LoggerFactory;
import org.springaicommunity.agentcore.annotation.AgentCoreInvocation;
import org.springaicommunity.agentcore.context.AgentCoreContext;
import org.springaicommunity.agentcore.context.AgentCoreHeaders;
import org.springframework.ai.chat.client.ChatClient;
import org.springframework.ai.chat.memory.ChatMemory;
import org.springframework.ai.tool.ToolCallbackProvider;
import org.springframework.beans.factory.annotation.Value;
import org.springframework.stereotype.Service;
import reactor.core.publisher.Flux;

@Service
public class ChatService {

    private static final Logger log = LoggerFactory.getLogger(ChatService.class);

    static final String FAILED_MESSAGE = "The agent could not complete the request. See the agent logs for details.";
    static final String INVALID_ACTOR_MESSAGE = "The runtime user id must not contain ':'.";

    private final ChatClient chatClient;

    public ChatService(
            ChatClient.Builder builder,
            List<ToolCallbackProvider> tools,
            @Value("\${agent.system-prompt}") String systemPrompt) {
        this.chatClient = builder
            .defaultSystem(systemPrompt)
            .defaultTools(tools.toArray())
            .build();
    }

    /**
     * Streams one {@code {"text": "..."}} object per token and ends a failed stream with one
     * {@code {"error": "..."}} object. The cause is logged, not sent to the caller.
     */
    @AgentCoreInvocation
    public Flux<ChatChunk> chat(ChatRequest request, AgentCoreContext context) {
        String actor = firstNonBlank(context.getHeader(AgentCoreHeaders.USER_ID), "default-user");
        String session = firstNonBlank(context.getHeader(AgentCoreHeaders.SESSION_ID), "default-session");
        // AgentCore Memory reads the actor and session back from "<actor>:<session>", splitting at the first ':'.
        if (actor.indexOf(':') >= 0) {
            return Flux.just(ChatChunk.ofError(INVALID_ACTOR_MESSAGE));
        }
        String conversationId = actor + ":" + session;

        return chatClient.prompt()
            .user(request.prompt())
            .advisors(advisors -> advisors.param(ChatMemory.CONVERSATION_ID, conversationId))
            .stream()
            .content()
            .map(ChatChunk::ofText)
            .onErrorResume(error -> {
                log.error("Invocation failed for session {}", session, error);
                return Flux.just(ChatChunk.ofError(FAILED_MESSAGE));
            });
    }

    /** One streamed token, or the terminal error. Null fields are not serialized. */
    @JsonInclude(JsonInclude.Include.NON_NULL)
    public record ChatChunk(String text, String error) {

        static ChatChunk ofText(String text) {
            return new ChatChunk(text, null);
        }

        static ChatChunk ofError(String message) {
            return new ChatChunk(null, message);
        }
    }

    private static String firstNonBlank(String value, String fallback) {
        return value == null || value.isBlank() ? fallback : value;
    }
}
"
`;

exports[`Java assets > java/java/http/spring/base/src/main/java/com/example/agent/LocalMemoryConfig.java should match snapshot 1`] = `
"package com.example.agent;

import org.springframework.ai.chat.client.ChatClientBuilderCustomizer;
import org.springframework.ai.chat.client.advisor.MessageChatMemoryAdvisor;
import org.springframework.ai.chat.memory.MessageWindowChatMemory;
import org.springframework.boot.autoconfigure.condition.ConditionalOnExpression;
import org.springframework.context.annotation.Bean;
import org.springframework.context.annotation.Configuration;

/** Provides in-process conversation history when AgentCore Memory is not configured. */
@Configuration
@ConditionalOnExpression("'\${agentcore.memory.memory-id:}'.isEmpty()")
public class LocalMemoryConfig {

    @Bean
    ChatClientBuilderCustomizer localMemoryCustomizer() {
        var advisor = MessageChatMemoryAdvisor.builder(MessageWindowChatMemory.builder().build()).build();
        return builder -> builder.defaultAdvisors(advisor);
    }
}
"
`;

exports[`Java assets > java/java/http/spring/base/src/main/java/com/example/agent/UnknownToolConfig.java should match snapshot 1`] = `
"package com.example.agent;

import org.springframework.ai.tool.ToolCallback;
import org.springframework.ai.tool.definition.ToolDefinition;
import org.springframework.ai.tool.resolution.ToolCallbackResolver;
import org.springframework.context.annotation.Bean;
import org.springframework.context.annotation.Configuration;

/**
 * Answers a tool call whose name matches none of the request's tools with a tool error, so the model can
 * retry with a listed name. Requires {@code spring.ai.tools.resolution.fallback.enabled=true}. This resolver
 * replaces Spring AI's default one, so no tool outside the request's tool list can be resolved by name.
 * Replace with {@code spring.ai.tools.resolution.on-unresolved=return-error-response} once the template's
 * Spring AI version supports it.
 */
@Configuration
public class UnknownToolConfig {

    @Bean
    ToolCallbackResolver toolCallbackResolver() {
        return unknownToolResolver();
    }

    static ToolCallbackResolver unknownToolResolver() {
        return UnknownToolCallback::new;
    }

    /** Tool result returned for a tool name that is not offered in the request. */
    static final class UnknownToolCallback implements ToolCallback {

        private final ToolDefinition definition;

        UnknownToolCallback(String name) {
            this.definition = ToolDefinition.builder()
                .name(name)
                .description("Unknown tool")
                .inputSchema("{\\"type\\":\\"object\\"}")
                .build();
        }

        @Override
        public ToolDefinition getToolDefinition() {
            return definition;
        }

        @Override
        public String call(String toolInput) {
            return "Error: no tool is named \\"" + definition.name()
                + "\\". Call one of the tools listed in this request, using its exact name.";
        }
    }
}
"
`;

exports[`Java assets > java/java/http/spring/base/src/main/resources/application.properties should match snapshot 1`] = `
"spring.application.name={{name}}

# Bedrock Converse model. Override locally via MODEL_ID.
spring.ai.bedrock.converse.chat.model=\${MODEL_ID:{{#if modelId}}{{modelId}}{{else}}global.anthropic.claude-sonnet-4-5-20250929-v1:0{{/if~}} }
spring.ai.bedrock.converse.chat.max-tokens={{modelMaxTokens}}
spring.ai.bedrock.aws.region=\${AWS_REGION:us-east-1}
spring.ai.bedrock.aws.timeout=120s
# Read timeout for streaming responses.
spring.ai.bedrock.aws.async-read-timeout=120s
# Unlisted tool names resolve through UnknownToolConfig, which returns a tool error to the model.
spring.ai.tools.resolution.fallback.enabled=true

agent.system-prompt={{{escapeProps systemPrompt}}}
{{#if hasMemory}}

# The memory id and long-term auto-discovery are bridged only when {{memoryProviders.[0].envVarName}} is non-blank.
{{#if sessionTotalEventsLimit}}
agentcore.memory.short-term.total-events-limit={{sessionTotalEventsLimit}}
{{/if}}
{{/if}}
{{#if (or hasGateway remoteMcpTools.length)}}

# Connect to MCP servers on first use, not at startup.
spring.ai.mcp.client.initialized=false
spring.ai.mcp.client.annotation-scanner.enabled=false
{{#each remoteMcpTools}}
spring.ai.mcp.client.streamable-http.connections.{{name}}.url={{{url}}}
{{/each}}
{{/if}}
{{#if browserIdentifierEnvVar}}
agentcore.browser.browser-identifier=\${ {{~browserIdentifierEnvVar~}} :aws.browser.v1}
{{/if}}
{{#if codeInterpreterIdentifierEnvVar}}
agentcore.code-interpreter.code-interpreter-identifier=\${ {{~codeInterpreterIdentifierEnvVar~}} :aws.codeinterpreter.v1}
{{/if}}
"
`;

exports[`Java assets > java/java/http/spring/capabilities/env-bridge/src/main/java/com/example/agent/AgentCoreEnvironmentPostProcessor.java should match snapshot 1`] = `
"package com.example.agent;

import java.util.LinkedHashMap;
import java.util.Map;
import java.util.Set;

import org.springframework.boot.EnvironmentPostProcessor;
import org.springframework.boot.SpringApplication;
import org.springframework.core.env.ConfigurableEnvironment;
import org.springframework.core.env.MapPropertySource;
import org.springframework.core.env.StandardEnvironment;

/** Bridges non-blank AgentCore runtime environment values to Spring configuration. */
public class AgentCoreEnvironmentPostProcessor implements EnvironmentPostProcessor {

    private static final Set<String> MEMORY_ENV_VARS = Set.of({{#each memoryProviders}}"{{envVarName}}"{{#unless @last}}, {{/unless}}{{/each}});
    private static final Set<String> GATEWAY_ENV_VARS = Set.of({{#each gatewayProviders}}"{{envVarName}}"{{#unless @last}}, {{/unless}}{{/each}});
    private static final Map<String, String> ENV_TO_PROPERTY = Map.ofEntries(
{{#each memoryProviders}}
        Map.entry("{{envVarName}}", "agentcore.memory.memory-id"){{#unless @last}},{{else}}{{#if ../gatewayProviders.length}},{{/if}}{{/unless}}
{{/each}}
{{#each gatewayProviders}}
        Map.entry("{{envVarName}}", "spring.ai.mcp.client.streamable-http.connections.{{name}}.url"){{#unless @last}},{{/unless}}
{{/each}}
    );

    @Override
    public void postProcessEnvironment(ConfigurableEnvironment environment, SpringApplication application) {
        Map<String, Object> properties = new LinkedHashMap<>();
        for (Map.Entry<String, String> entry : ENV_TO_PROPERTY.entrySet()) {
            String value = System.getenv(entry.getKey());
            if (value != null && !value.isBlank()) {
                properties.put(entry.getValue(), value);
                if (MEMORY_ENV_VARS.contains(entry.getKey())) {
                    properties.put("agentcore.memory.long-term.auto-discovery", true);
                }
                if (GATEWAY_ENV_VARS.contains(entry.getKey())) {
                    properties.put("spring.ai.mcp.client.enabled", true);
                }
            }
        }

        if (!properties.isEmpty()) {
            environment.getPropertySources().addAfter(
                StandardEnvironment.SYSTEM_ENVIRONMENT_PROPERTY_SOURCE_NAME,
                new MapPropertySource("agentcoreEnvironment", properties)
            );
        }
    }
}
"
`;

exports[`Java assets > java/java/http/spring/capabilities/env-bridge/src/main/resources/META-INF/spring.factories should match snapshot 1`] = `
"org.springframework.boot.EnvironmentPostProcessor=com.example.agent.AgentCoreEnvironmentPostProcessor
"
`;

exports[`Java assets > java/java/http/spring/capabilities/execution-limits/src/main/java/com/example/agent/limits/ExecutionLimitsConfig.java should match snapshot 1`] = `
"package com.example.agent.limits;

import java.time.Duration;

import org.springframework.ai.chat.client.ChatClientBuilderCustomizer;
import org.springframework.context.annotation.Bean;
import org.springframework.context.annotation.Configuration;

@Configuration
public class ExecutionLimitsConfig {

    @Bean
    ChatClientBuilderCustomizer requestTimeoutCustomizer() {
        var advisor = new TimeoutAdvisor(Duration.ofSeconds({{timeoutSeconds}}));
        return builder -> builder.defaultAdvisors(advisor);
    }
}
"
`;

exports[`Java assets > java/java/http/spring/capabilities/execution-limits/src/main/java/com/example/agent/limits/TimeoutAdvisor.java should match snapshot 1`] = `
"package com.example.agent.limits;

import java.time.Duration;
import java.util.concurrent.TimeoutException;

import org.springframework.ai.chat.client.ChatClientRequest;
import org.springframework.ai.chat.client.ChatClientResponse;
import org.springframework.ai.chat.client.advisor.api.CallAdvisor;
import org.springframework.ai.chat.client.advisor.api.CallAdvisorChain;
import org.springframework.ai.chat.client.advisor.api.StreamAdvisor;
import org.springframework.ai.chat.client.advisor.api.StreamAdvisorChain;
import org.springframework.core.Ordered;
import reactor.core.publisher.Flux;
import reactor.core.publisher.Mono;
import reactor.core.scheduler.Schedulers;

/** Bounds the total wall-clock duration of an agent turn. */
public class TimeoutAdvisor implements CallAdvisor, StreamAdvisor {

    private final Duration timeout;

    public TimeoutAdvisor(Duration timeout) {
        this.timeout = timeout;
    }

    @Override
    public Flux<ChatClientResponse> adviseStream(ChatClientRequest request, StreamAdvisorChain chain) {
        Mono<Void> deadline = Mono.delay(timeout).then(Mono.error(timeoutException()));
        return chain.nextStream(request).takeUntilOther(deadline);
    }

    @Override
    public ChatClientResponse adviseCall(ChatClientRequest request, CallAdvisorChain chain) {
        return Mono.fromCallable(() -> chain.nextCall(request))
            .subscribeOn(Schedulers.boundedElastic())
            .timeout(timeout, Mono.error(timeoutException()))
            .block();
    }

    @Override
    public String getName() {
        return "requestTimeoutAdvisor";
    }

    @Override
    public int getOrder() {
        return Ordered.HIGHEST_PRECEDENCE;
    }

    private TimeoutException timeoutException() {
        return new TimeoutException("Agent turn exceeded " + timeout);
    }
}
"
`;

exports[`Java assets > java/java/http/spring/capabilities/gateway/src/main/java/com/example/agent/mcp/McpConfig.java should match snapshot 1`] = `
"package com.example.agent.mcp;

import java.util.Set;

import io.modelcontextprotocol.client.transport.HttpClientStreamableHttpTransport;
import io.modelcontextprotocol.client.transport.customizer.McpSyncHttpClientRequestCustomizer;
import org.springframework.ai.mcp.customizer.McpClientCustomizer;
import org.springframework.boot.autoconfigure.condition.ConditionalOnProperty;
import org.springframework.context.annotation.Bean;
import org.springframework.context.annotation.Configuration;
import software.amazon.awssdk.auth.credentials.DefaultCredentialsProvider;
import software.amazon.awssdk.http.ContentStreamProvider;
import software.amazon.awssdk.http.SdkHttpMethod;
import software.amazon.awssdk.http.SdkHttpRequest;
import software.amazon.awssdk.http.auth.aws.signer.AwsV4HttpSigner;
import software.amazon.awssdk.http.auth.spi.signer.SignedRequest;
import software.amazon.awssdk.regions.providers.DefaultAwsRegionProviderChain;

/** Adds SigV4 authentication to AWS_IAM AgentCore Gateway MCP connections. */
@Configuration
@ConditionalOnProperty("spring.ai.mcp.client.enabled")
public class McpConfig {

    private static final Set<String> GATEWAY_CONNECTIONS = Set.of({{#each gatewayProviders}}"{{name}}"{{#unless @last}}, {{/unless}}{{/each}});
    private static final Set<String> RESTRICTED_HEADERS = Set.of("content-length", "host", "expect");

    @Bean
    McpClientCustomizer<HttpClientStreamableHttpTransport.Builder> sigV4RequestCustomizer() {
        var signer = AwsV4HttpSigner.create();
        var credentialsProvider = DefaultCredentialsProvider.builder().build();
        var regionProvider = DefaultAwsRegionProviderChain.builder().build();

        // Resolves credentials and region per request from the default provider chains.
        McpSyncHttpClientRequestCustomizer requestCustomizer = (builder, method, endpoint, body, context) -> {
            var region = regionProvider.getRegion();
            var request = SdkHttpRequest.builder()
                .uri(endpoint)
                .method(SdkHttpMethod.valueOf(method))
                .putHeader("Content-Type", "application/json")
                .build();
            ContentStreamProvider payload = body != null && !body.isEmpty()
                ? ContentStreamProvider.fromUtf8String(body)
                : null;

            SignedRequest signedRequest = signer.sign(signRequest -> signRequest
                .identity(credentialsProvider.resolveIdentity().join())
                .request(request)
                .payload(payload)
                .putProperty(AwsV4HttpSigner.SERVICE_SIGNING_NAME, "bedrock-agentcore")
                .putProperty(AwsV4HttpSigner.REGION_NAME, region.id()));

            signedRequest.request().headers().forEach((name, values) -> {
                if (!RESTRICTED_HEADERS.contains(name.toLowerCase())) {
                    values.forEach(value -> builder.setHeader(name, value));
                }
            });
        };

        return (name, transportBuilder) -> {
            if (GATEWAY_CONNECTIONS.contains(name)) {
                transportBuilder.httpRequestCustomizer(requestCustomizer);
            }
        };
    }
}
"
`;

exports[`Java assets > java/java/http/spring/capabilities/memory/src/main/java/com/example/agent/memory/MemoryConfig.java should match snapshot 1`] = `
"package com.example.agent.memory;

import org.springaicommunity.agentcore.memory.longterm.AgentCoreMemory;
import org.springframework.ai.chat.client.ChatClientBuilderCustomizer;
import org.springframework.ai.chat.client.advisor.api.Advisor;
import org.springframework.boot.autoconfigure.condition.ConditionalOnProperty;
import org.springframework.context.annotation.Bean;
import org.springframework.context.annotation.Configuration;

@Configuration
@ConditionalOnProperty("agentcore.memory.memory-id")
public class MemoryConfig {

    @Bean
    ChatClientBuilderCustomizer agentCoreMemoryCustomizer(AgentCoreMemory memory) {
        return builder -> builder.defaultAdvisors(memory.advisors.toArray(new Advisor[0]));
    }
}
"
`;

exports[`Java assets > java/java/http/spring/capabilities/skills/src/main/java/com/example/agent/skills/SkillsConfig.java should match snapshot 1`] = `
"package com.example.agent.skills;

import org.springaicommunity.agent.tools.SkillsTool;
import org.springframework.ai.tool.ToolCallbackProvider;
import org.springframework.context.annotation.Bean;
import org.springframework.context.annotation.Configuration;
import org.springframework.core.io.ClassPathResource;

@Configuration
public class SkillsConfig {

    @Bean
    ToolCallbackProvider skillsToolCallbackProvider() {
        // SkillsTool parses the packaged SKILL.md files once at boot and performs no network access.
        return ToolCallbackProvider.from(
            SkillsTool.builder().addSkillsResource(new ClassPathResource("skills/")).build()
        );
    }
}
"
`;
